<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo4"
    tools:context=".register_main">

    <Button
        android:id="@+id/btnregister"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/ubuntumedium"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709" />

    <Button
        android:id="@+id/btnbac"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/ubuntumedium"
        android:text="@string/Volver"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865" />

    <Button
        android:id="@+id/button12"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/ubuntumedium"
        app:icon="@drawable/retrato"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconSize="18dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button13"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/ubuntumedium"
        app:icon="@drawable/cerrar"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button14"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/ubuntumedium"
        app:icon="@drawable/usuario"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconSize="18dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button15"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/ubuntumedium"
        app:icon="@drawable/retrato"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextText10"
        android:layout_width="164dp"
        android:layout_height="52dp"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/ubuntumedium"
        android:hint="@string/Lastname"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.487"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextText8"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/ubuntumedium"
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextText9"
        android:layout_width="164dp"
        android:layout_height="52dp"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/ubuntumedium"
        android:hint="@string/Name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/ubuntumedium"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>