<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="false"
    android:background="#E3E1E1"
    tools:context=".SesionFragment"
    tools:ignore="DuplicateIds">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".SesionFragment">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="282dp"
            android:layout_height="256dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/editTextText3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.672" />

        <Button
            android:id="@+id/button"
            android:layout_width="309dp"
            android:layout_height="54dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/ubuntumedium"
            android:text="@string/iniciarsesion"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.794" />

        <Button
            android:id="@+id/button5"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/ubuntumedium"
            app:icon="@drawable/cerrar"
            app:iconGravity="start"
            app:iconPadding="8dp"
            app:iconTint="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4"
            app:layout_constraintVertical_bias="0.426"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button4"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/ubuntumedium"
            app:icon="@drawable/usuario"
            app:iconGravity="start"
            app:iconPadding="8dp"
            app:iconSize="18dp"
            app:iconTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.522"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnir"
            android:layout_width="309dp"
            android:layout_height="54dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/ubuntumedium"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.899" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="164dp"
            android:layout_height="52dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:backgroundTint="#000000"
            android:ems="10"
            android:fontFamily="@font/ubuntumedium"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.524"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="164dp"
            android:layout_height="52dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:backgroundTint="#000000"
            android:ems="10"
            android:fontFamily="@font/ubuntumedium"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.652"
            tools:ignore="TouchTargetSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>